--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -6,10 +6,12 @@ RUN mkdir /code
 # set the working directory inside the image
 WORKDIR /code
 
-# copy the fastflow executable inside the image
-#COPY test_parfor_unbalanced /code/
-COPY socket_client.py /code/
+# copy the code of the parallel application inside the container.
+COPY parallelapp.py /code/
+
+COPY requirements.txt /code/
+
+RUN pip install -r requirements.txt
 
 # when the container starts it runs the executable in the entrypoint
-#ENTRYPOINT ["python","/code/test_parfor_unbalance"]
-ENTRYPOINT ["python","/code/socket_client.py"]
+ENTRYPOINT ["python","/code/parallelapp.py"]
