--- a/Dockerfile-controller
+++ b/Dockerfile-controller
@@ -8,11 +8,12 @@ WORKDIR /code
 
 # copy the fastflow executable inside the image
 #COPY test_parfor_unbalanced /code/
-COPY socket_server.py /code/
-COPY requirements.py /code/
+COPY nodecontroller.py /code/
 
-RUN pip install -r requirements.py
+COPY requirements.txt /code/
+
+RUN pip install -r requirements.txt
 
 # when the container starts it runs the executable in the entrypoint
-#ENTRYPOINT ["python","/code/test_parfor_unbalance"]
-ENTRYPOINT ["python","/code/socket_server.py"]
+
+ENTRYPOINT ["python","/code/nodecontroller.py"]
