--- a/intra-fog/Dockerfile-fnc
+++ b/intra-fog/Dockerfile-fnc
@@ -6,12 +6,11 @@ RUN mkdir /code
 # set the working directory inside the image
 WORKDIR /code
 
-# copy the code of the parallel application inside the container.
-COPY parallelapp.py /code/
+COPY fnc.py /code/
 
 COPY requirements.txt /code/
 
 RUN pip install -r requirements.txt
 
-# when the container starts it runs the executable in the entrypoint
-ENTRYPOINT ["python","/code/parallelapp.py"]
+# when the container starts it runs the executable in the entrypoint (-u unbuffered output)
+ENTRYPOINT ["python","-u", "/code/fnc.py"]
