inter-fog socket communication is woking

--- a/inter-fog/Dockerfile-sserver
+++ b/inter-fog/Dockerfile-sserver
@@ -1,14 +1,7 @@
 FROM python:3.5-alpine
 
-# create the folder code inside the docker image
-# RUN mkdir /code
-
-# set the working directory inside the image
-# WORKDIR /code
-
 # copy the code of the parallel application inside the container.
 COPY socket_server.py /
 
-
 # when the container starts it runs the executable in the entrypoint
-ENTRYPOINT ["python","/socket_server.py"]
+ENTRYPOINT ["python","-u","/socket_server.py"]
