--- a/intra-fog/Dockerfile-fnc
+++ b/intra-fog/Dockerfile-fnc
@@ -1,4 +1,4 @@
-FROM python:3.5-alpine
+FROM python:3.5
 
 # create the folder code inside the docker image
 RUN mkdir /code
@@ -8,7 +8,7 @@ WORKDIR /code
 
 #COPY fnc.py /code/
 
-#COPY requirements.txt /code/
+COPY requirements.txt /code/
 
 RUN pip install -r requirements.txt
 
