--- a/inter-fog/Dockerfile-sserver
+++ b/inter-fog/Dockerfile-sserver
@@ -7,8 +7,8 @@ RUN mkdir /code
 WORKDIR /code
 
 # copy the code of the parallel application inside the container.
-# COPY socket_server_inet.py /
+# COPY socket_server.py /
 
 
 # when the container starts it runs the executable in the entrypoint
-ENTRYPOINT ["python","-u","/code/socket_server_inet.py"]
+ENTRYPOINT ["python","-u","/code/socket_server.py"]
