--- a/inter-fog/Dockerfile-sserver
+++ b/inter-fog/Dockerfile-sserver
@@ -7,7 +7,7 @@ RUN mkdir /code
 WORKDIR /code
 
 # copy the code of the parallel application inside the container.
-COPY socket_server.py /
+COPY socket_server.py /code/socket_server.py
 
 
 # when the container starts it runs the executable in the entrypoint
