--- a/inter-fog/Dockerfile-filtering
+++ b/inter-fog/Dockerfile-filtering
@@ -6,6 +6,8 @@ RUN mkdir /code
 # set the working directory inside the image
 WORKDIR /code
 
+# copy the code of the parallel application inside the container.
+COPY filtering.py /code/filtering.py
 
 # when the container starts it runs the executable in the entrypoint
-ENTRYPOINT ["python","-u","/code/socket_server.py"]
+ENTRYPOINT ["python","-u","/code/filtering.py"]
