--- a/inter-fog/Dockerfile-filtering-dev
+++ b/inter-fog/Dockerfile-filtering-dev
@@ -6,8 +6,6 @@ RUN mkdir /code
 # set the working directory inside the image
 WORKDIR /code
 
-# copy the code of the parallel application inside the container.
-COPY socket_client.py /code/socket_client.py
 
 # when the container starts it runs the executable in the entrypoint
-ENTRYPOINT ["python","-u","/code/socket_client.py"]
+ENTRYPOINT ["python","-u","/code/filtering.py"]
